# Bonelab

./: .gitignore  README.md  README.rst  azure-pipelines.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
bonelab/: __init__.py
bonelab/cli/: BPAQ.py  DownloadData.py  ExtractFields.py  ITKSnapAnnotParse.py  Image2ImageSeries.py  ImageCentroids.py  ImageCheckerBoard.py  ImageConverter.py  ImageFilter.py  ImageMask.py  ImageSeries2Image.py  Muscle.py  PanningVideo.py  PointPicker.py  PointPicker_implement.py  PseudoCT.py  RapidPrototype.py  RapidPrototypeLetters.py  RegBCn88config.conf  RegBCn88modelgenerator.py  RegBCtransformresults.py  RenderMasks.py  ScrubVMSExtension.py  SliceViewer.py  TabulateIPLTransform.py  VisualizeSegmentation.py  ZAxisOffset.py  __init__.py  adaptive_local_thresholding.py  aimod.py  aix.py  apply_sitk_transform.py  autocontour.py  compute_overlap.py  convert_aims_to_nifti.py  convert_mask_to_aim.py  convert_masks_to_aims.py  create_atlas.py  demons_registration.py  fft_laplace_hamming.py  (+5 more)
bonelab/gui/: QtBasic.py  QtSurfaceViewer.py  QtSurfaceViewer.ui  QtViewer.py
bonelab/io/: __init__.py  download_data.py  points.py  sitk_helpers.py  vtk_helpers.py
bonelab/util/: __init__.py  aim_calibration_header.py  analysis.py  demons_registration_util.py  echo_arguments.py  multiscale_registration.py  n88_util.py  registration_util.py  time_stamp.py  vtk_util.py  write_csv.py
examples/IPL/: IPL_RP.COM  IPL_RPTEST.COM
examples/R/: AccuracyPlots_Manuscript_R1_2015-02-06-slopedBA.R  BlandAltmanHorizontalMultiColour.R  (+12 more)
tests/: config_cli.py  test_cli.py
(+236 files in other folders)
