[metadata]
name = bonelab
author = Steven K. Boyd
author-email = skboyd@ucalgary.ca
summary = Helpful scripts for working with computed tomography data
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/Bonelab/Bonelab
project_urls =
    Source Code = https://github.com/Bonelab/Bonelab
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[entry_points]
console_scripts =
    aimod = bonelab.cli.aimod:main
    aix = bonelab.cli.aix:main
    blDownloadData = bonelab.cli.DownloadData:main
    blExtractFields = bonelab.cli.ExtractFields:main
    blImage2ImageSeries = bonelab.cli.Image2ImageSeries:main
    blImageConvert = bonelab.cli.ImageConverter:main
    blImageSeries2Image = bonelab.cli.ImageSeries2Image:main
    blMuscle = bonelab.cli.Muscle:main
    blPseudoCT = bonelab.cli.PseudoCT:main
    blSliceViewer = bonelab.cli.SliceViewer:main
    blVisualizeSegmentation = bonelab.cli.VisualizeSegmentation:main
    blRapidPrototype = bonelab.cli.RapidPrototype:main
    scrub_vms_extension = bonelab.cli.ScrubVMSExtension:main
    blBPAQ = bonelab.cli.BPAQ:main
    blRapidPrototypeLetters = bonelab.cli.RapidPrototypeLetters:main
    blQtViewer = bonelab.gui.QtViewer:main
    blQtBasic = bonelab.gui.QtBasic:main

[pbr]
skip_changelog = 1
skip_authors = 1
